--- a/style/style.css
+++ b/style/style.css
@@ -566,9 +566,10 @@ td {
     text-align: center;
     padding: 10px;
     color: white;
-    font-size: 20px;
-    font-weight: 500;
+    font-size: 16px;
+    font-weight: 400;
     font-style: normal;
+    line-height: 1.5;
 }
 
 @media (max-width: 600px) {
