--- a/style/style.css
+++ b/style/style.css
@@ -174,7 +174,7 @@ body {
 
 /* banner */
 .banner {
-    background-image: url('../img/bg.png');
+    background-image: url('../img/bg.webp');
     background-repeat:no-repeat;
     display: flex;
     justify-content: center;
