--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,23 @@
+@font-face {
+    font-family: "Roboto";
+    src: url(../fonts/Roboto-Regular.ttf) format(truetype);
+    font-weight: 400;
+    font-display: swap;
+}
 
+@font-face {
+    font-family: "Roboto";
+    src: url(../fonts/Roboto-Black.ttf) format(truetype);
+    font-weight: 500;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Poppins";
+    src: url(../fonts/Roboto-Bold.ttf) format(truetype);
+    font-weight: 600;
+    font-display: swap;
+}
 body {
     display: flex;
     flex-direction: column;
