--- a/style/style.css
+++ b/style/style.css
@@ -583,9 +583,8 @@ table {
 }
 
 td {
-    border: 3px solid #DF8109;
-    text-align: center;
-    padding: 10px;
+    border: 3px groove #DF8109;
+    padding: 8px;
     color: white;
     font-size: 16px;
     font-weight: 400;
